# sqs-mock-c-

./: .gitignore  CMakeLists.txt  SQS.cpp  SQS.h  main.cpp
